--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(minlossplot,penAFT.cva)
 S3method(penAFT.cva,default)
 S3method(predict,penAFT.cva)
+export(minlossplot.penAFT.cva)
 export(penAFT.cva)
 importFrom(grDevices,palette)
 importFrom(grDevices,topo.colors)
