--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 S3method(minlossplot,penAFT.cva)
 S3method(penAFT.cva,default)
 S3method(predict,penAFT.cva)
-export(minlossplot.penAFT.cva)
+export(minlossplot)
 export(penAFT.cva)
+export(runScript)
 importFrom(grDevices,palette)
 importFrom(grDevices,topo.colors)
 importFrom(graphics,lines)
