--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Roxygen: list(markdown=TRUE)
 Encoding: UTF-8
 LazyData: true
 Collate: 
-    'penAFTUtils.r'
+    'cvaUtils.r'
     'cva.penAFTFormula.R'
     'lossgrid.R'
     'minlossplot.R'
