--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,9 @@ S3method(lossgrid,penAFT.cva)
 S3method(minlossplot,penAFT.cva)
 S3method(predict,penAFT.cva)
 export(lossgrid)
-export(minlossplot)
 export(penAFT.cva)
 export(runScript)
+importFrom(glmnetUtils,minlossplot)
 importFrom(grDevices,palette)
 importFrom(grDevices,topo.colors)
 importFrom(graphics,lines)
