--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(lossgrid,default)
 S3method(lossgrid,penAFT.cva)
 S3method(minlossplot,penAFT.cva)
+S3method(penAFT.cva,default)
 S3method(predict,penAFT.cva)
 export(lossgrid)
 export(penAFT.cva)
