--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(minlossplot,penAFT.cva)
 S3method(penAFT.cva,default)
 S3method(predict,penAFT.cva)
 export(lossgrid)
+export(minlossplot)
 export(penAFT.cva)
 export(runScript)
 importFrom(glmnetUtils,minlossplot)
